# testing_components_V2

./: Cargo.toml
src/: battery.rs  fan.rs  leds.rs  main.rs  photosensor.rs  temperature.rs
