[package]
name = "testing_components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1"

# fan binary
[[bin]]
    name = "fan"
    path = "src/fan.rs"

# LEDs binary
[[bin]]
    name = "leds"
    path = "src/leds.rs"

# client binary
[[bin]]
    name = "photosensor"
    path = "src/photosensor.rs"

# client binary
[[bin]]
    name = "tmp"
    path = "src/temperature.rs"


# battery binary
[[bin]]
    name = "battery"
    path = "src/battery.rs"
